[Build] Disallow Java security-manager in all I-/Y-/Smoke-tests
Part of https://github.com/eclipse-platform/eclipse.platform.releng.aggregator/issues/2623